--- a/MODMAPI/MODMAPI/appsettings.json
+++ b/MODMAPI/MODMAPI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DbConnection": "Data Source=DESKTOP-U3IVEDN;Initial Catalog=MODMWebsiteDB;Trusted_connection = true;TrustServerCertificate=true;"
+  }
 }
